--- a/forms/css/style.css
+++ b/forms/css/style.css
@@ -32,13 +32,20 @@ hr {
   position: relative;
 }
 
+/* reset style */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 /* input style 1 */
 
 .form_input_st_1 {
   width: 300px;
   border: 1px solid #333;
   border-radius: 5px;
-  padding: 12px 20px;
+  padding: 15px 20px;
 }
 
 .form_label_st_1 {
@@ -57,6 +64,7 @@ hr {
   outline: 0;
   border-width: 0 0 2px;
   padding: 12px 20px;
+  text-align: center;
 }
 
 /* end input style 2 */
@@ -68,6 +76,7 @@ hr {
   outline: 0;
   border-width: 2px 0;
   padding: 12px 20px;
+  text-align: center;
 }
 
 /* end input style 3 */
@@ -79,6 +88,7 @@ hr {
   outline: 0;
   border-width: 0 2px 0;
   padding: 12px 20px;
+  text-align: center;
 }
 
 /* end input style 4 */
