--- a/buttons/css/style.css
+++ b/buttons/css/style.css
@@ -10,7 +10,7 @@
 
 :root {
   --white-clr: #fff;
-  --gray-clr: #7a7a7a;
+  --gray-clr: #333;
   --btn-wd-d: 100px;
   --btn-hg-d: 35px;
   --btn-fs: 14px;
@@ -101,7 +101,7 @@ input[type="checkbox"]#power:checked:after {
   overflow: hidden;
   transition: 0.6s;
 }
-.btn-st-02:first-child {
+.btn-st-02 {
   color: var(--gray-clr);
   border-color: var(--gray-clr);
 }
@@ -134,7 +134,49 @@ input[type="checkbox"]#power:checked:after {
 .btn-st-02:hover {
   color: var(--white-clr);
 }
-.btn-st-02:hover:first-child {
+.btn-st-02:hover {
   background: var(--gray-clr);
 }
 /* end button style 02 */
+
+/* button glow */
+.btn-glow {
+  color: var(--gray-clr);
+}
+.btn-glow:hover {
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 400%;
+  color: var(--white-clr);
+  border-color: var(--white-clr);
+}
+
+.btn-glow:before {
+  content: "";
+  position: absolute;
+  background: inherit;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -5px;
+  border-radius: 50px;
+  filter: blur(20px);
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.btn-glow:hover:before {
+  opacity: 1;
+  z-index: -1;
+}
+.btn-glow:hover {
+  z-index: 1;
+  animation: glow 8s linear infinite;
+}
+@keyframes glow {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
+/* end button glow */
