--- a/cards/css/style.css
+++ b/cards/css/style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900&display=swap");
-* {
-  font-family: "Poppins";
+
+body {
   background-color: #ececec;
+  font-family: "Poppins";
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
 .container {
   position: relative;
   display: grid;
@@ -28,6 +28,9 @@ hr {
   color: #7a7a7a;
 }
 
+.title {
+  text-align: center;
+}
 /* card 1 */
 
 .card {
@@ -36,6 +39,7 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.2s;
   margin: 10px;
+  background: #fff;
 }
 
 .card:hover {
@@ -50,3 +54,104 @@ hr {
   border-radius: 10px;
 }
 /* end card 1 */
+
+/* vertical card slide */
+
+.wrapper-vcs {
+  position: relative;
+  height: 200px;
+  margin-top: 15%;
+}
+
+.wrapper-vcs .outer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper-vcs .card-vcs {
+  background: #fff;
+  width: 430px;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  justify-content: space-between;
+  border-radius: 100px 20px 20px 100px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+  animation: animate 15s linear infinite;
+  animation-delay: calc(3s * var(--delay));
+}
+.outer:hover .card-vcs {
+  animation-play-state: paused;
+}
+.wrapper-vcs .card-vcs:last-child {
+  animation-delay: calc(-3s * var(--delay));
+}
+@keyframes animate {
+  0% {
+    opacity: 0;
+    transform: translateY(100%) scale(0.5);
+  }
+  5%,
+  20% {
+    opacity: 0.4;
+    transform: translateY(100%) scale(0.7);
+  }
+  25%,
+  40% {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0%) scale(1);
+  }
+  45%,
+  60% {
+    opacity: 0.4;
+    transform: translateY(-100%) scale(0.7);
+  }
+  65%,
+  100% {
+    opacity: 0;
+    transform: translateY(-100%) scale(0.5);
+  }
+}
+.card-vcs .content {
+  display: flex;
+  align-items: center;
+}
+.wrapper-vcs .card-vcs .img {
+  height: 90px;
+  width: 90px;
+  position: absolute;
+  left: 10px;
+  background: #fff;
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+.card-vcs .img img {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.card-vcs .details {
+  margin-left: 100px;
+}
+.details span {
+  font-weight: 600;
+  font-size: 18px;
+}
+.card-vcs a {
+  text-decoration: none;
+  padding: 7px 18px;
+  border-radius: 25px;
+  color: #fff;
+  background: linear-gradient(to bottom, #bea2e7 0%, #86b7e7 100%);
+  transition: all 0.3s ease;
+}
+.card-vcs a:hover {
+  transform: scale(0.94);
+}
+/* end vertical card slide */
