--- a/cards/css/style.css
+++ b/cards/css/style.css
@@ -116,7 +116,7 @@ hr {
     transform: translateY(-100%) scale(0.5);
   }
 }
-.card-vcs .content {
+.card-vcs .content-vcs {
   display: flex;
   align-items: center;
 }
@@ -155,3 +155,156 @@ hr {
   transform: scale(0.94);
 }
 /* end vertical card slide */
+
+/* horizontal card slide */
+.blog-card-hcs {
+  position: relative;
+  height: 370px;
+  width: 100%;
+  padding: 30px;
+  border-radius: 25px;
+  background: white;
+}
+.inner-part {
+  position: absolute;
+  display: flex;
+  height: 360px;
+  align-items: center;
+  justify-content: center;
+}
+#imgTap:checked ~ .inner-part {
+  padding: 0;
+  transition: 0.1s ease-in;
+}
+.inner-part .img-hcs {
+  height: 260px;
+  width: 260px;
+  flex-shrink: 0;
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 2px 3px 15px rgba(0, 0, 0, 0.1);
+}
+#imgTap:checked ~ .inner-part .img-hcs {
+  height: 370px;
+  width: 850px;
+  margin-top: 10px;
+  transition: 0.3s 0.2s ease-in;
+}
+.img-hcs img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  opacity: 0;
+  transition: 0.6s;
+}
+#tap-1:checked ~ .inner-part .img-1,
+#tap-2:checked ~ .inner-part .img-2,
+#tap-3:checked ~ .inner-part .img-3 {
+  opacity: 1;
+  transition-delay: 0.2s;
+}
+.content-hcs {
+  padding: 0 20px 0 35px;
+  width: 100%;
+  margin-left: 50px;
+  opacity: 0;
+  transition: 0.6s;
+}
+#imgTap:checked ~ .inner-part .content-hcs {
+  display: none;
+}
+#tap-1:checked ~ .inner-part .content-1,
+#tap-2:checked ~ .inner-part .content-2,
+#tap-3:checked ~ .inner-part .content-3 {
+  opacity: 1;
+  margin-left: 0px;
+  z-index: 100;
+  transition-delay: 0.3s;
+}
+.content-hcs span {
+  display: block;
+  color: #7b7992;
+  margin-bottom: 15px;
+  font-size: 22px;
+  font-weight: 500;
+}
+.content-hcs .title {
+  font-size: 30px;
+  font-weight: 700;
+  color: #0d0925;
+  margin-bottom: 20px;
+  text-align: left;
+}
+.content-hcs .text {
+  color: #4e4a67;
+  font-size: 19px;
+  margin-bottom: 30px;
+  line-height: 1.5em;
+  text-align: justify;
+}
+.content-hcs button {
+  display: inline-flex;
+  padding: 15px 20px;
+  border: none;
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #fff0e6;
+  font-weight: 600;
+  letter-spacing: 1px;
+  border-radius: 50px;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid #bea2e7;
+  background: linear-gradient(147deg, #bea2e7 0%, #86b7e7 74%);
+}
+.content-hcs button:hover {
+  background: linear-gradient(147deg, #a884df 0%, #6fa9e4 74%);
+}
+.sliders {
+  position: absolute;
+  bottom: 25px;
+  left: 65%;
+  transform: translateX(-50%);
+  z-index: 12;
+}
+#imgTap:checked ~ .sliders {
+  display: none;
+}
+.sliders .tap {
+  position: relative;
+  height: 10px;
+  width: 50px;
+  background: #d9d9d9;
+  border-radius: 5px;
+  display: inline-flex;
+  margin: 0 3px;
+  cursor: pointer;
+}
+.sliders .tap:hover {
+  background: #cccccc;
+}
+.sliders .tap:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: -100%;
+  background: linear-gradient(147deg, #bea2e7 0%, #86b7e7 74%);
+  border-radius: 10px;
+  transform: scaleX(0);
+  transition: transform 0.6s;
+  transform-origin: left;
+}
+input[type="radio"],
+input[type="checkbox"] {
+  display: none;
+}
+#tap-1:checked ~ .sliders .tap-1:before,
+#tap-2:checked ~ .sliders .tap-2:before,
+#tap-3:checked ~ .sliders .tap-3:before {
+  transform: scaleX(1);
+  width: 100%;
+}
+/* end horizontal card slide */
